# alx-backend-graphql_crm

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt  seed_db.py
alx-backend-graphql/: asgi.py  settings.py  urls.py  wsgi.py
alx-backend-graphql_crm/: asgi.py  db.sqlite3  settings.py
alx-backend-graphql_crm/alx-backend-graphql_crm/: settings.py  wsgi.py
crm/: cron.py  models.py  schema.py  settings.py
crm/cron_jobs/: clean_inactive_customers.sh  customer_cleanup_crontab.txt  order_reminders_crontab.txt  send_order_reminders.py
crm/migrations/: 0001_initial.py
graphql_crm/: schema.py
